[tool.poetry]
name = "pulsarml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
pylint = "^2.16.1"
mypy = "^1.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
